# backend/internal/delivery/http/models/report_turn_over_request.go
@@ -1,103 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// ReportTurnOverRequest report turn over request
-//
-// swagger:model ReportTurnOverRequest
-type ReportTurnOverRequest struct {
-
-	// account id
-	// Required: true
-	// Minimum: 1
-	AccountID int64 `json:"account_id"`
-
-	// year
-	// Required: true
-	// Maximum: 4000
-	// Minimum: 2000
-	Year int64 `json:"year"`
-}
-
-// Validate validates this report turn over request
-func (m *ReportTurnOverRequest) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateAccountID(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateYear(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ReportTurnOverRequest) validateAccountID(formats strfmt.Registry) error {
-
-	if err := validate.Required("account_id", "body", int64(m.AccountID)); err != nil {
-		return err
-	}
-
-	if err := validate.MinimumInt("account_id", "body", m.AccountID, 1, false); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *ReportTurnOverRequest) validateYear(formats strfmt.Registry) error {
-
-	if err := validate.Required("year", "body", int64(m.Year)); err != nil {
-		return err
-	}
-
-	if err := validate.MinimumInt("year", "body", m.Year, 2000, false); err != nil {
-		return err
-	}
-
-	if err := validate.MaximumInt("year", "body", m.Year, 4000, false); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validates this report turn over request based on context it is used
-func (m *ReportTurnOverRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ReportTurnOverRequest) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ReportTurnOverRequest) UnmarshalBinary(b []byte) error {
-	var res ReportTurnOverRequest
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
